--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "homepage": "https://github.com/Kelem/Pomorello",
+  "dependencies": {
+    "angular-route": "~1.3.2",
+    "angularjs": "~1.3.2",
+    "jquery": "~2.1.1"
+  }
 }
