--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "angular-route": "~1.3.2",
     "angularjs": "~1.3.2",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "angular-material": "~0.5.1"
   }
 }
